write persistent server that uses ORM

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Hack Reactor",
   "license": "Copyright 2013, Hack Reactor. All rights reserved.",
   "dependencies": {
-    "express": "~3.4.8"
+    "express": "~3.4.8",
+    "sequelize": "~1.7.0"
   },
   "devDependencies": {
     "request": "^2.34.0",
